osbuild: create artifact files with final filenames
Turns out we can stencil in the name of the artifacts we want
to create and just have OSBuild go ahead and write files to the
right name.

Also dropped an extra copy that's not really necessary.

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -1,5 +1,6 @@
 version: '2'
 mpp-vars:
+  artifact_name_prefix: $artifact_name_prefix
   ostree_repo: $ostree_repo
   ostree_ref: $ostree_ref
   ociarchive: $ociarchive
