osbuild/gcp: use gzip compression level 9
This leverages the featurework in upstream OSBuild [1]
and matches the compression level we use today for gzip compression.

[1] https://github.com/osbuild/osbuild/commit/cfaabe618f1df3fd927657b57a3fe92714e85f94

--- a/src/osbuild-manifests/platform.gcp.ipp.yaml
+++ b/src/osbuild-manifests/platform.gcp.ipp.yaml
@@ -85,5 +85,6 @@ pipelines:
               name:raw-gcp-image-tar:
                 file: disk.tar
         options:
+          level: 9
           filename:
             mpp-format-string: '{artifact_name_prefix}-gcp.{arch}.tar.gz'
