--- a/src/osbuild-manifests/platform.applehv.ipp.yaml
+++ b/src/osbuild-manifests/platform.applehv.ipp.yaml
@@ -55,15 +55,15 @@ pipelines:
     build:
       mpp-format-string: '{buildroot}'
     stages:
-      - type: org.osbuild.copy
+      - type: org.osbuild.gzip
         inputs:
-          tree:
-            type: org.osbuild.tree
+          file:
+            type: org.osbuild.files
             origin: org.osbuild.pipeline
             references:
-              - name:raw-applehv-image
+              name:raw-applehv-image:
+                file: disk.img
         options:
-          paths:
-            - from: input://tree/disk.img
-              to:
-                mpp-format-string: 'tree:///{artifact_name_prefix}-applehv.{arch}.raw'
+          level: 9
+          filename:
+            mpp-format-string: '{artifact_name_prefix}-applehv.{arch}.raw.gz'
