runvm-osbuild: Add initial support for LiveISO generation
 - Introduce necessary variables for platform.live-iso.ipp.yaml.
 - Add the platform.live-iso.ipp manifest to support LiveISO creation.
 - Adapt CoreOS platform manifests

Signed-off-by: Renata Ravanelli <rravanel@redhat.com>

--- a/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
@@ -11,6 +11,7 @@ mpp-vars:
   extra_kargs: $extra_kargs
   metal_image_size_mb: $metal_image_size_mb
   cloud_image_size_mb: $cloud_image_size_mb
+  squashfs_compression: $squashfs_compression
   bios_boot_size_mb: 1
   ppc_prep_size_mb: 4
   reserved_part_size_mb: 1
@@ -666,3 +667,5 @@ pipelines:
       path: platform.qemu.ipp.yaml
   - mpp-import-pipelines:
       path: platform.qemu-secex.ipp.yaml
+  - mpp-import-pipelines:
+      path: platform.live.ipp.yaml
