osbuild: Add Live ISO/PXE build support
This backports and takes advantage of the new
org.osbuild.coreos.live-artifacts.mono stage.

Signed-off-by: Renata Ravanelli <rravanel@redhat.com>

--- a/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
@@ -666,3 +666,5 @@ pipelines:
       path: platform.qemu.ipp.yaml
   - mpp-import-pipelines:
       path: platform.qemu-secex.ipp.yaml
+  - mpp-import-pipelines:
+      path: platform.live.ipp.yaml
