osbuild: use sparse for GCP tar artifact
The support for this was added to the tar stage upstream in [1]
and we just never applied it to the manifests here.

[1] https://github.com/osbuild/osbuild/pull/1614

--- a/src/osbuild-manifests/platform.gcp.ipp.yaml
+++ b/src/osbuild-manifests/platform.gcp.ipp.yaml
@@ -68,6 +68,7 @@ pipelines:
           filename: disk.tar
           format: oldgnu
           root-node: omit
+          sparse: true
           # Set these to false so GCP image upload/create will succeed
           acls: false
           selinux: false
