--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -775,6 +775,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.gcp.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.hetzner.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
   - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
