image-defaults: don't set a defaults for live-rootfs*
Right now we need to ratchet in these changes using image.yaml
from the config repos rather than changing the default for
all consumers off the bat.

Note that the OSBuild stage defaults to squashfs/zstd so this is
just making it so that it what gets picked up and used for anywhere
where it's not otherwise configured.

This also has the side effect of making CI pass again because of
-zlzma,level=6 requiring a lot of memory right now:
https://github.com/erofs/erofs-utils/issues/13

--- a/src/image-default.yaml
+++ b/src/image-default.yaml
@@ -33,6 +33,7 @@ aws-imdsv2-only: true
 aws-volume-type: "gp3"
 aws-x86-boot-mode: "uefi-preferred"
 
-# Use erofs by default
-live-rootfs-fstype: "erofs"
-live-rootfs-fsoptions: "-zlzma,level=6 -Eall-fragments,fragdedupe=inode -C1048576 --quiet"
+# Defaults for the root filesystem in the Live ISO/PXE artifacts. Left unset
+# for now as we ratchet in erofs support.
+# live-rootfs-fstype: "erofs"
+# live-rootfs-fsoptions: "-zlzma,level=6 -Eall-fragments,fragdedupe=inode -C1048576 --quiet"
