osbuild-manifests: update comment at the top of the ipp.yaml files
We are getting closer to when these will be used for our production
streams so let's update the comments so they don't become out of date.

--- a/src/osbuild-manifests/platform.applehv.ipp.yaml
+++ b/src/osbuild-manifests/platform.applehv.ipp.yaml
@@ -1,5 +1,4 @@
-# This file isn't yet being used today but holds an OSBuild image
-# definition for the applehv platform.
+# This file defines the artifact to be used for the applehv platform.
 version: '2'
 pipelines:
   - name: raw-applehv-image
