osbuild: support building aliyun disks

--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -775,6 +775,8 @@ pipelines:
               deployment:
                 default: true
   - mpp-import-pipelines:
+      path: platform.aliyun.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
       path: platform.gcp.ipp.yaml
