--- a/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
@@ -663,6 +663,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.openstack.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.qemu.ipp.yaml
   - mpp-import-pipelines:
       path: platform.qemu-secex.ipp.yaml
