--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -787,6 +787,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.openstack.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
   - mpp-import-pipelines:
       path: platform.qemu.ipp.yaml
