osbuild: support building vultr disks

--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -793,4 +793,6 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.qemu.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.vultr.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.live.ipp.yaml
