osbuild: support building aws disks

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -773,6 +773,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.aws.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.gcp.ipp.yaml
   - mpp-import-pipelines:
       path: platform.hetzner.ipp.yaml
