--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -779,6 +779,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.aws.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.exoscale.ipp.yaml
   - mpp-import-pipelines:
       path: platform.gcp.ipp.yaml
