--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -781,6 +781,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.aws.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.azure.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.digitalocean.ipp.yaml
   - mpp-import-pipelines:
       path: platform.exoscale.ipp.yaml
