--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -801,6 +801,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.nutanix.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.qemu.ipp.yaml
   - mpp-import-pipelines:
       path: platform.vultr.ipp.yaml
