--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -797,6 +797,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.ibmcloud.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.kubevirt.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.openstack.ipp.yaml
   - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
