--- a/mantle/build
+++ b/mantle/build
@@ -11,7 +11,8 @@ if [[ $# -eq 0 ]]; then
 fi
 
 declare -A BASEARCH_TO_GOARCH=([s390x]=s390x [x86_64]=amd64 [aarch64]=arm64 [ppc64le]=ppc64le)
-KOLET_ARCHES="${KOLET_ARCHES:-s390x x86_64 aarch64 ppc64le}"
+ARCH=$(arch)
+KOLET_ARCHES="${KOLET_ARCHES:-${ARCH}}"
 
 race=
 if [ -n "${ENABLE_GO_RACE_DETECTOR:-}" ] && [[ ! "$(uname -m)" =~ "s390" ]]; then
