--- a/mantle/build
+++ b/mantle/build
@@ -10,7 +10,7 @@ if [[ $# -eq 0 ]]; then
     set -- cmd/* schema
 fi
 
-declare -A BASEARCH_TO_GOARCH=([s390x]=s390x [x86_64]=amd64 [aarch64]=arm64 [ppc64le]=ppc64le)
+declare -A BASEARCH_TO_GOARCH=([x86_64]=amd64 [aarch64]=arm64 [ppc64le]=ppc64le [riscv64]=riscv64 [s390x]=s390x)
 ARCH=$(arch)
 KOLET_ARCHES="${KOLET_ARCHES:-${ARCH}}"
 
