--- a/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
@@ -648,3 +648,5 @@ pipelines:
       path: platform.qemu-secex.ipp.yaml
   - mpp-import-pipelines:
       path: platform.live.ipp.yaml
+  - mpp-import-pipelines:
+      path: platform.kubevirt.ipp.yaml
