--- a/.tekton/kola-targetcli-push.yaml
+++ b/.tekton/kola-targetcli-push.yaml
@@ -7,8 +7,9 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: |
+      event == "push" &&
+      files.all.exists(x, x.matches("tests/containers/targetcli/"))
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coreos-assembler
