.tekton: enabling hermetic builds
This will enforce Konflux to prefetch the dependencies defined in
the lock.yaml files with [1]. Then during the build, Konflux will
1. inject the repositories where the deps are stored, 2. configure
the clients to pull the deps from there, 3. build without network.

As rpm is still not fully supported [2], we have to enable
`dev-package-managers` for now in the pipeline.

All specific files enabling hermetic builds are located in the
`ci/hermetic/` folder. You can find the helper scripts that automate
the process of generating the lock YAML files, replacing the manual
steps. The automation streamlines the workflow, reduces the chance
of human error, and ensures consistency in the generated lock files.
More details can be found in the updated README.

This required adaptations to `build.sh` and the Dockerfile to support
both hermetic and non-hermetic build processes.

[1] https://github.com/konflux-ci/build-definitions/tree/main/task/prefetch-dependencies-oci-ta/0.2
[2] https://github.com/hermetoproject/hermeto?tab=readme-ov-file#package-managers

--- a/.tekton/kola-targetcli-push.yaml
+++ b/.tekton/kola-targetcli-push.yaml
@@ -8,7 +8,10 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main" && "./tests/containers/targetcli/***".pathChanged()
+      == "main" &&
+      ("tests/containers/targetcli/***".pathChanged() ||
+       "ci/hermetic/rpms.lock.yaml".pathChanged()
+      )
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coreos-assembler
@@ -31,6 +34,14 @@ spec:
     value: ./tests/containers/targetcli/Containerfile
   - name: path-context
     value: .
+  - name: hermetic
+    value: true
+  - name: prefetch-input
+    value: '[{"type": "rpm", "path": "ci/hermetic"}]'
+  # Note: to be removed once rpm fully supported
+  # https://github.com/hermetoproject/hermeto?tab=readme-ov-file#package-managers
+  - name: dev-package-managers
+    value: true
   pipelineRef:
     params:
     - name: bundle
