--- a/.tekton/kola-nfs-pull-request.yaml
+++ b/.tekton/kola-nfs-pull-request.yaml
@@ -9,8 +9,11 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main" && ( "./tests/containers/nfs/***".pathChanged() || ".tekton/kola-nfs-pull-request.yaml".pathChanged()
-      || "Containerfile".pathChanged() )
+      == "main" &&
+      ("tests/containers/nfs/***".pathChanged() ||
+       ".tekton/kola-nfs-pull-request.yaml".pathChanged() ||
+       "ci/hermetic/rpms.lock.yaml".pathChanged()
+      )
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coreos-assembler
@@ -35,6 +38,14 @@ spec:
     value: Containerfile
   - name: path-context
     value: tests/containers/nfs
+  - name: hermetic
+    value: true
+  - name: prefetch-input
+    value: '[{"type": "rpm", "path": "ci/hermetic"}]'
+  # Note: to be removed once rpm fully supported
+  # https://github.com/hermetoproject/hermeto?tab=readme-ov-file#package-managers
+  - name: dev-package-managers
+    value: true
   pipelineRef:
     params:
     - name: bundle
