--- a/tests/containers/targetcli/Containerfile
+++ b/tests/containers/targetcli/Containerfile
@@ -1,4 +1,4 @@
-FROM quay.io/fedora/fedora-minimal:42
+FROM quay.io/fedora/fedora:42
 
 RUN dnf install -y targetcli kmod && dnf clean all
 RUN systemctl enable target
