Add Oracle Cloud Infrastructure images

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -763,6 +763,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.openstack.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.oraclecloud.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.qemu.ipp.yaml
   - mpp-import-pipelines:
       path: platform.live.ipp.yaml
