--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -777,6 +777,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.openstack.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.oraclecloud.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.proxmoxve.ipp.yaml
   - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
