.tekton: switch to dedicated SA
We change the Service Account used by build pipeline from
"appstudio-pipeline" to dedicated to the Component Service Account.

--- a/.tekton/coreos-assembler-push.yaml
+++ b/.tekton/coreos-assembler-push.yaml
@@ -50,6 +50,8 @@ spec:
     - name: kind
       value: pipeline
     resolver: bundles
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-coreos-assembler
   workspaces:
   - name: git-auth
     secret:
