--- a/.tekton/kola-tang-pull-request.yaml
+++ b/.tekton/kola-tang-pull-request.yaml
@@ -55,6 +55,8 @@ spec:
     - name: kind
       value: pipeline
     resolver: bundles
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-kola-tang
   workspaces:
   - name: git-auth
     secret:
