.tekton: do not prefetch deps
As a follow-up of [1], we also need to disable prefetching the
dependencies to not rely on the lockfiles. Those files are not
automatically updated as for now.

[1] fb71d1d9a5dbd44ec537db55739689c01db62977

--- a/.tekton/coreos-assembler-push.yaml
+++ b/.tekton/coreos-assembler-push.yaml
@@ -33,14 +33,14 @@ spec:
     value: .
   - name: hermetic
     value: false
-  - name: prefetch-input
-    value: '[{"type": "rpm", "path": "ci/hermetic"}, {"path": "ci/hermetic", "type": "generic"}]'
+  #- name: prefetch-input
+  #  value: '[{"type": "rpm", "path": "ci/hermetic"}, {"path": "ci/hermetic", "type": "generic"}]'
   # Note: to be removed once rpm fully supported
   # https://github.com/hermetoproject/hermeto?tab=readme-ov-file#package-managers
-  - name: dev-package-managers
-    value: true
-  - name: build-args
-    value: ["NO_NETWORK=1"]
+  #- name: dev-package-managers
+  #  value: true
+  #- name: build-args
+  #  value: ["NO_NETWORK=1"]
   pipelineRef:
     params:
     - name: bundle
