.tekton: skip checks
We disable the default Konflux checks for now as we don't need them
during the onboarding process. We'll enable them again once all the
pipeline set up.

--- a/.tekton/coreos-assembler-pull-request.yaml
+++ b/.tekton/coreos-assembler-pull-request.yaml
@@ -34,6 +34,8 @@ spec:
     value: Dockerfile
   - name: path-context
     value: .
+  - name: skip-checks
+    value: true
   - name: hermetic
     value: false
   #- name: prefetch-input
