--- a/.tekton/coreos-assembler-push.yaml
+++ b/.tekton/coreos-assembler-push.yaml
@@ -31,6 +31,8 @@ spec:
     value: Dockerfile
   - name: path-context
     value: .
+  - name: skip-checks
+    value: true
   - name: hermetic
     value: false
   #- name: prefetch-input
