--- a/.tekton/kola-nfs-pull-request.yaml
+++ b/.tekton/kola-nfs-pull-request.yaml
@@ -38,6 +38,8 @@ spec:
     value: Containerfile
   - name: path-context
     value: tests/containers/nfs
+  - name: skip-checks
+    value: true
   - name: hermetic
     value: false
   #- name: prefetch-input
