--- a/.tekton/kola-tang-pull-request.yaml
+++ b/.tekton/kola-tang-pull-request.yaml
@@ -38,6 +38,8 @@ spec:
     value: ./tests/containers/tang/Containerfile
   - name: path-context
     value: .
+  - name: skip-checks
+    value: true
   - name: hermetic
     value: false
   #- name: prefetch-input
