--- a/.tekton/kola-tang-push.yaml
+++ b/.tekton/kola-tang-push.yaml
@@ -34,6 +34,8 @@ spec:
     value: ./tests/containers/tang/Containerfile
   - name: path-context
     value: .
+  - name: skip-checks
+    value: true
   - name: hermetic
     value: false
   #- name: prefetch-input
