renovate: handle dockerfile bump properly
We don't use the default rule which proposes to bump to latest fxx
found in quay.io/fedora wich is rawhide. Instead, we use the
endoflife-date datasource which publish only the stable releases [1].
So this rule will bump our dockerfile based on Fedora to latest stable
release.

[1] https://endoflife.date/fedora

--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,11 @@
       "description": "Disable updates for Go modules"
     },
     {
+      "matchDatasources": ["docker"],
+      "matchDepNames": ["quay.io/fedora/fedora"],
+      "enabled": false
+    },
+    {
       "matchManagers": ["rpm"],
       "matchBaseBranches": ["main"],
       "groupName": "RPM Updates",
@@ -38,6 +43,19 @@
     }
   ],
   "customManagers": [
+    {
+      "customType": "regex",
+      "description": "Update Fedora base image based on endoflife-date",
+      "fileMatch": [
+        "Dockerfile|Containerfile"
+      ],
+      "matchStrings": [
+        "quay.io/fedora/fedora:(?<currentValue>.*)"
+      ],
+      "versioningTemplate": "loose",
+      "datasourceTemplate": "endoflife-date",
+      "depNameTemplate": "fedora"
+    },
     {
       "customType": "regex",
       "datasourceTemplate": "custom.oc",
